# lydia

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
config/: airflow.cfg
dags/: bitcoin_dag.py
dags/utils/: extract.py  verify_duckdb_data.py  visualize.py
dbt/: .user.yml  profiles.yml
dbt/models/: daily_candlestick.sql  schema.yml
dbt/tests/: assert_closing_price_is_positive.sql  assert_maximum_price_is_positive.sql  assert_minimum_price_is_positive.sql  assert_opening_price_is_positive.sql
my_crypto_pipeline/: .user.yml  dbt_project.yml  profiles.yml
my_crypto_pipeline/models/: daily_candlestick.sql  schema.yml
my_pipeline/: extract.py  orchestrate.py  visualize.py
